2007-05-30  Frank Ch. Eigler  <fche@redhat.com>

	PR 4567.
	* systemtap.base/optim.stp, optim.exp: New test.
	
2007-05-29  Will Cohen  <wcohen@redhat.com>

	PR4540
	* systemtap.stress/conversions.exp: Adjust for ia64 address space.

2007-05-25  Martin Hunt  <hunt@redhat.com>

	* systemtap.samples/lket.exp (cleanfiles): Set timeout inside expect.
	* systemtap.maps/absentstats.exp: Set timeout inside expect.
	* lib/stap_run2.exp (stap_run2): Set timeout to 180 inside expect.
	* lib/stap_run.exp (stap_run): Set timeout to 180 for slower machines.
	Remove $ anchor on output. Fix a few minor nits in patterns.

2007-05-24  David Smith  <dsmith@redhat.com>

	PR4446
	* systemtap.base/marker.exp: Renumbered tests and added new tests
	for invalid argument name ("$foo1") and writing to marker
	arguments.

2007-05-23  David Smith  <dsmith@redhat.com>

	PR4446
	* systemtap.base/marker.exp: Added new marker test.
	* buildok/marker.stp: Removed old marker test.
	
2007-05-08  Will Cohen  <wcohen@redhat.com>
	PR4470
	* testsuite/systemtap.syscall/syscall.exp: Build correct sizes for
	32-bit and 64-bit machines.

2007-05-07  Martin Hunt  <hunt@redhat.com>
	PR4466   
	* systemtap.samples/system_func.stp: Rewrite test to account 
	for probes not being placed until after begin.
	* systemtap.samples/system_func.exp: Only expect 1 sys_open.

2007-05-06  Frank Ch. Eigler  <fche@elastic.org>

	* semko/thirtynine.stp: New test.

2007-05-01  Martin Hunt  <hunt@redhat.com>

	* systemtap.samples/system_func.*: New test.

2007-05-01  Martin Hunt  <hunt@redhat.com>
	
	* systemtap.samples/sysopen*: Deleted.

2007-04-29  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am (EXTRA_DIST): Add dejagnu subdirectories.
	* configure.ac: Bump version to match parent directory.
	* Makefile.in, configure: Regenerated.

2007-04-25 David Wilder <dwilder@ibm.com>

	* systemtap.samples/profile.exp Increased timeout from 30 to 60 sec
	to fix intermittent failures on s390x.
